Bug 1255133 - Surface links to external documentation alongside relevant error messages 1/2; r=bgrins